# yggdrasil

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  docker-compose.yml  pyproject.toml  start_qwen3_embedding.sh
data_auditing/: README.md  audit_fleet_multi_model.py  audit_multilane_retrieval.py  audit_session_canonical.py  lib_session_metrics.py
docs/adr/: 0001-multi-replica-data-plane.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/share/: yggdrasil-overview.html
docs/superpowers/plans/: 2026-06-24-yggdrasil-mcp-trajectory-memory.md  2026-06-25-code-review-remediation.md  2026-06-25-feat-multi-tenant.md  2026-06-25-feat-ui.md  2026-06-25-multi-tenant-authz-FOLLOWON.md
docs/superpowers/runbooks/: cliproxy-atif-postgres.md  matt-pocock-skills.md  tailscale-funnel.md
docs/superpowers/specs/: 2026-06-24-yggdrasil-mcp-trajectory-memory-design.md  (+5 more)
scripts/: build_api_key_owner_map.py  cliproxy_logs_to_atif_postgres.py  estimate_experience_storage.py  eval_long_horizon_ab.py  eval_segmented_retrieval_skill.py  export_mongo_sessions_jsonl.py  import_mongo_for_testing.py  import_mongo_sessions.py  long_horizon_tasks.py  mongo_importer_pre_embed.py  reembed_mongo_org_demo.py  rehydrate_experience_qdrant.py  run_with_memcap.sh  seed_demo_org.py  seed_lab_team_experiences.py  seed_synthetic_experience.py  smoke_integration.py  smoke_normalize_mongo.py  sync_qdrant_payload_v4.py
scripts/lib/: __init__.py  mem_limit.py  mongo_session_io.py
skills/yggdrasil-trajectory-memory/: SKILL.md
src/yggdrasil/: __init__.py  config.py
tests/: conftest.py  fakes.py  test_config.py  test_scaffold_import.py
tests/adapters/: test_ensure_collection_dim.py  test_qdrant_filters.py  test_qdrant_point_id.py  test_regex_scrubber.py  test_sqlite_store.py  test_weighted_fusion.py
tests/domain/: test_effort_merge.py
tests/mcp/: test_tools_register.py
tests/services/: test_embed_dim_validation.py  test_retrieval_gates.py  test_rrf.py  test_session_lifecycle.py  test_tenancy.py
tests/web/: test_app.py
(+67 files in other folders)
