[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yggdrasil"
version = "0.1.0"
description = "MCP trajectory experience memory (Approach 2: SQLite + Qdrant)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Yggdrasil contributors" }]
dependencies = [
    "pydantic>=2.6,<3",
    "python-dotenv>=1.0,<2",
    "httpx>=0.27,<1",
    "qdrant-client>=1.12,<2",
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
]
mongo = [
    "pymongo>=4.6,<5",
]
web = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.9,<1",
    "itsdangerous>=2.1,<3",
]

[project.scripts]
yggdrasil-mcp = "yggdrasil.mcp.server:main"
yggdrasil-web = "yggdrasil.web.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
